# sqlmiddelware

./: LICENSE  README.md  db.sqlite3  requirements.txt
main/: settings.py  urls.py
sql-package/: README.md  pyproject.toml
sql-package/julius-query-inspector/: middleware.py
sqlquery/: apps.py  factory.py  models.py  views.py
sqlquery/migrations/: 0001_initial.py
