[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "julius-query-inspector"
version = "1.0.1"
description = "A Django middleware package to print sql statements to the terminal."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Julius Markwei" }
]

dependencies = [
    "Pygments>=2.14.0", "sqlparse>=0.4.3"
]

requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["julius-query-inspector"]

[project.urls]
Homepage = "https://github.com/juliusmarkwei"

